tests/macros/rawlist/validate.stderr
error: option `validate` does not exist for kind `rawlist`
 --> $DIR/validate.rs:2:47
  |
2 |     let q = inquisition::questions![rawlist { validate: todo!() }];
  |                                               ^^^^^^^^
