tests/macros/rawlist/validate.rs
fn main() {
    let q = inquisition::questions![rawlist { validate: todo!() }];
}
